@@ -1,6 +1,7 @@
 0.2.0
 - Supports chains.
 - Supports modular structure.
+- Changed tempus to Tempus and TP, added method noConflict().
 
 0.1.31
 - Added TempusDate constructor.
